<resources>
    <string name="app_name">QUIZ</string>
    <string name="button_text">Продолжить</string>
    <string name="button_welcome_text">Начать</string>

    <string name="music_quiz">MUSIC QUIZ</string>
    <string name="image_description">welcome image</string>
    <string name="result_title">Ваш результат:</string>

    <string name="question_1">Сколько участников в kpop группе BTS?</string>
    <string name="answer_to_1_1">0</string>
    <string name="answer_to_1_2">7</string>

    <string name="question_2">Как называется лейбл звукозаписи chief keef-a?</string>
    <string name="answer_to_2_1">GLO GANG</string>
    <string name="answer_to_2_2">DRAIN GANG</string>

    <string name="question_3">Настоящее имя исполнителя Blood Orange?</string>
    <string name="answer_to_3_1">Devonté Hynes</string>
    <string name="answer_to_3_2">Rakim Athelaston Mayers</string>
    <string name="answer_to_3_3">Skid Row</string>

    <string name="question_4">В каком году основалась группа Black Sabbath?</string>
    <string name="answer_to_4_1">1968</string>
    <string name="answer_to_4_2">1970</string>
    <string name="answer_to_4_3">1965</string>

    <string name="button_result_text">Начать заново</string>
    <string name="button_quiz_text">Отправить</string>
    <string name="hello_blank_fragment">Викторина</string>

    <string name="question_5">Где была основана группа AC/DC?</string>
    <string name="answer_to_5_1">Сидней ноябрь 1973</string>
    <string name="answer_to_5_2">Сидней ноябрь 1970</string>
    <string name="answer_to_5_3">Висконсинс июль 1980</string>

    <string name="question_6">Кто основал группу AC/DC?</string>
    <string name="answer_to_6_1">братьями Малькольмом и Ангусом Янгами</string>
    <string name="answer_to_6_2">Клаус Майне</string>
    <string name="answer_to_6_3">Skid Row</string>

    <string name="button_back">Назад</string>

    <string name="start_fragment_label">Start Fragment</string>
    <string name="questions_fragment_label">Questions Fragment</string>
    <string name="result_fragment_label">Results Fragment</string>

</resources>